Thu Jan 22 16:18:52 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/cpu-profile-generator.py:

          . Basic updates to the code to improve formatting.

        * examples/PICML/AntiSPAM/hypothesis1-assembly-generator.py:

          . Implemented a simple script for generating assemblies for
            hypothesis 1.

        * examples/PICML/AntiSPAM/hypothesis1:
        * examples/PICML/AntiSPAM/hypothesis1/templates:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly.config:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly1.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly10.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly11.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly12.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly13.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly14.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly15.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly16.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly17.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly18.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly19.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly2.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly20.assembly:
        * examples/PICML/AntiSPAM/hypothesis1/templates/hypothesis1-template-assembly3.assembly: