@@ -1,3 +1,11 @@
+Fri Jan 23 06:00:49 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/deployment:
+        * cuts/utils/deployment/deployment.mpc:
+        * cuts/utils/deployment/unique-deployments.cpp:
+
+          . Checkpointing simple utility for generating unique deployments.
+
 Thu Jan 22 16:18:52 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * examples/PICML/AntiSPAM/cpu-profile-generator.py:
